<resources>
    <string name="app_name">black moon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="today_history">历史的今天</string>
    <string name="cancel">取消</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    权限测试-->
    <string name="action_settings">Settings</string>

    <string name="setting">设置</string>
    <string name="perm_tip">
        当前应用缺少必要权限。\n请点击"设置"-"权限"-打开所需权限。\n最后点击两次后退按钮，即可返回。
    </string>
    <string name="ask_again">请给予应用必要权限，让程序可正常工作。</string>

    <string name="request_perm_tip">请给予权限，才能正常使用</string>

    <string name="device_des">正常使用MDM产品，请点击激活。</string>


    <!--  小米推送-->
    <string name="ok">确认</string>
    <string name="set_alias">设置别名</string>
    <string name="unset_alias">撤销别名</string>
    <string name="set_account">设置帐号</string>
    <string name="unset_account">撤销帐号</string>
    <string name="subscribe_topic">订阅标签</string>
    <string name="unsubscribe_topic">撤销标签</string>
    <string name="set_accept_time">设置时间</string>
    <string name="pause_push">暂停推送</string>
    <string name="resume_push">恢复推送</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="register_success">Register push success.</string>
    <string name="register_fail">Register push fail.</string>
    <string name="recv_passthrough_message"> Receive a passthrough message. Content is \"%1$s\"</string>
    <string name="click_notification_message"> Clicked a notification message. Content is \"%1$s\"</string>
    <string name="arrive_notification_message"> Arrived a notification message. Content is \"%1$s\"</string>
    <string name="set_alias_success"> Set alias \"%1$s\" success.</string>
    <string name="set_alias_fail"> Set alias fail for %1$s.</string>
    <string name="unset_alias_success"> Unset alias \"%1$s\" success.</string>
    <string name="unset_alias_fail"> Unset alias fail for %1$s.</string>
    <string name="set_account_success"> Set account \"%1$s\" success.</string>
    <string name="set_account_fail"> Set account fail for %1$s.</string>
    <string name="unset_account_success"> Unset account \"%1$s\" success.</string>
    <string name="unset_account_fail"> Unset account fail for %1$s.</string>
    <string name="subscribe_topic_success"> Subscribe topic \"%1$s\" success.</string>
    <string name="subscribe_topic_fail"> Subscribe topic fail for %1$s.</string>
    <string name="unsubscribe_topic_success"> Unsubscribe topic \"%1$s\" success.</string>
    <string name="unsubscribe_topic_fail"> Unsubscribe topic fail for %1$s.</string>
    <string name="set_accept_time_success"> Set accept time %1$s - %2$s success.</string>
    <string name="set_accept_time_fail"> Set accept time fail for %1$s.</string>
    <string name="xiaomi_push">小米推送</string>
    <string name="qr_scan">扫一扫</string>
    <string name="browser">浏览器</string>data_binding
    <string name="data_binding">MVVC之data_binding</string>
    <string name="function_list">功能列表</string>
    <string name="jni_test">jni测试</string>
    <string name="undetermined">待定</string>

    <!--二维码扫描-->
    <string name="title_activity_scan_qr_code">扫一扫</string>
    <string name="qc_code_close">关闭</string>
    <string name="qr_code_select_picture">照片</string>
    <string name="qr_code_open_flash_light">打开闪光灯</string>
    <string name="qr_code_close_flash_light">关闭闪光灯</string>
    <string name="qr_code_auto_scan_notification">将二维码放入框内，即可自动扫描</string>
    <string name="qr_code_notification">提示</string>
    <string name="qr_code_camera_not_open">您的相机功能好像没有打开哦~去\"设置>隐私>相机\"设置一下吧</string>
    <string name="qr_code_positive_button_know">知道了</string>
    <string name="qr_code_positive_button_confirm">确认</string>
    <string name="qr_code_could_not_read_qr_code_from_picture">没有读出图片中的链接，换张图片试试吧~</string>
    <string name="qr_code_could_not_read_qr_code_from_scanner">对不起，无法打开扫出的内容</string>
    <string name="qr_code_camera_not_found">未检测到相机</string>


</resources>
