<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mine.MineFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="18sp"
        android:background="#9aacac"
        android:padding="5dp"
        android:text="@string/function_list"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mine_message_push"
        android:gravity="center"
        android:textSize="15sp"
        android:background="@drawable/mine_selector_bg"
        android:padding="5dp"
        android:text="@string/xiaomi_push"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mine_qr_scanner"
        android:gravity="center"
        android:textSize="15sp"
        android:background="@drawable/mine_selector_bg"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/qr_scan"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mine_browser"
        android:gravity="center"
        android:textSize="15sp"
        android:background="@drawable/mine_selector_bg"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/browser"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mine_data_binding"
        android:gravity="center"
        android:textSize="15sp"
        android:background="@drawable/mine_selector_bg"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/data_binding"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mine_jni_test"
        android:gravity="center"
        android:textSize="15sp"
        android:background="@drawable/mine_selector_bg"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/jni_test"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mine_undetermined"
        android:gravity="center"
        android:textSize="15sp"
        android:background="@drawable/mine_selector_bg"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/undetermined"/>
</LinearLayout>
